Closed Bug 36935 Opened 25 years ago Closed 25 years ago

[i18n] Textwidget doesn't scroll when non-7-bit-ascii chars are entered

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: asjo, Assigned: kinmoz)

References

()

Details

(Whiteboard: [nsbeta2+] Fix checked in.)

Attachments

(1 file)

When a textwidget is full of chars, it scrolls when you enter more text. Unless you enter a non-7-bit-ascii letter (like "æ" (&aelig, a common Danish national char)), then the text doesn't scroll to the left until you enter another 7-bit-ascii char, then the text scrolls two chars. An example page is at <URL:http://www.koldfront.dk/mozilla/M15/textwidget.html> I'm using Mozilla M15 on a Debian GNU/Linux 2.2 box.
reassign to kin for m16
Assignee: rods → kin
Target Milestone: --- → M16
Status: UNCONFIRMED → NEW
Ever confirmed: true
Accepting bug.
Status: NEW → ASSIGNED
moving to m17
Target Milestone: M16 → M17
nsbeta2 6/1-. Correct handling of international text input in html32 forms.
Keywords: nsbeta2
Summary: Textwidget doesn't scroll when non-7-bit-ascii chars are entered → [i18n] Textwidget doesn't scroll when non-7-bit-ascii chars are entered
Putting on [nsbeta2+] radar for beta2 fix.
QA Contact: ckritzer → teruko
Whiteboard: [nsbeta2+]
m16
Target Milestone: M17 → M16
So how exactly does one enter an "æ" from a U.S. keyboard? (Note: I did a copy/paste to get the one in the previous sentence.)
Okay, I think I've figured out how to do it, I just had to run: xmodmap -n -e "keysym Control_R = Multi_key" to map my control key to the Multi key. Now typing Multi-A-E gives me "æ". Note: Using the Multi-Key does not work in Ender-Lite widgets. I'll file a seperate bug on that.
I have a real simple fix for this. I will check it in as soon as I can after jfrancis@netscape.com reviews it. For the curious, the fix involves making an existing method (ScrollSelectionIntoView()) on one of our listener classes a static function so that it can be used by all our listeners. The next step was to call this static function from nsTextEditorTextListener::HandleText().
Whiteboard: [nsbeta2+] → [nsbeta2+] Fix in hand, waiting for review from jfrancis@netscape.com
reviewed by jfrancis
Whiteboard: [nsbeta2+] Fix in hand, waiting for review from jfrancis@netscape.com → [nsbeta2+] Fix in hand, expected to land 05/30/00
Fix checked in: Made ScrollSelectionIntoView() a static function and called it from HandleText(). editor/base/nsEditorEventListeners.cpp editor/base/nsEditorEventListeners.h r=jfrancis@netscape.com a=beppe@netscape.com
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta2+] Fix in hand, expected to land 05/30/00 → [nsbeta2+] Fix checked in.
I verified this in 2000-05-31-08 Linux build.
Status: RESOLVED → VERIFIED
*** Bug 38596 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: