Fix for bug #36935: [i18n] Textwidget doesn't scroll when non-7-bit-ascii chars Made ScrollSelectionIntoView() a static function and called it from HandleText().     editor/base/nsEditorEventListeners.cpp     editor/base/nsEditorEventListeners.h

r=jfrancis@netscape.com  a=beppe@netscape.com